<resources>
    <string name="app_name">BHU OPD Booking</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="opd_booking">OPD Booking</string>
    <string name="opd_schedule">OPD Schedule</string>
    <string name="free_telemedicine">Free Telemedicine</string>
    <string name="upcoming_feature">Upcoming Feature</string>
    <string name="book_vaccine_slot">Book Vaccine Slot</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>