<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_doctor"
            android:title="@string/opd_booking" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_schedule"
            android:title="@string/opd_schedule" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_telemedicine"
            android:title="@string/free_telemedicine" />
    </group>
    <item android:title="@string/upcoming_feature">

        <menu>
            <item
                android:id="@+id/cowin"
                android:icon="@drawable/ic_vaccine"
                android:title="@string/book_vaccine_slot">

            </item>
        </menu>
    </item>
</menu>